Updated to reflect lab02 assignment

--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Me?</title>
+    <!--<link rel="stylesheet" href="css/reset.css">-->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>My Website</h1>
+    </header>
+    <main>
+        <h2 class="biographytitle">About Me:</h2>
+        <p class="biography">I am DeAndre Ordonez and I'm an aspiring Software Developer.
+                            Quick history about myself is I was in the 
+                            <abbr title="United States Air Force">USAF</abbr>
+                            for 7 years doing airborne surveillance operations out of Tinker 
+                            <abbr title="Air Force Base">AFB</abbr> in Oklahoma City.
+                            I currently am working towards my Associates in Software Development which will be completed in 2024. I like to play my guitar and I enjoy playing videos games.
+                            <ol>
+                                <h4>Short Term Goals:</h4>                                
+                                <li>Finish Code Fellows Software Developer Program</li>
+                                <li>Finish Associate's in Software Development</li>
+                            </ol>
+        </p>
+    </main>
 </body>
+<script>
+        setTimeout(function() {
+        // Your JavaScript code from app.js here
+    }, 5000); // 5000 milliseconds = 5 seconds
+</script>
+<script src="js/app.js"></script>
 </html>
