Added window.onload function to start the js file after window loads.

--- a/index.html
+++ b/index.html
@@ -18,19 +18,18 @@
                             <abbr title="United States Air Force">USAF</abbr>
                             for 7 years doing airborne surveillance operations out of Tinker 
                             <abbr title="Air Force Base">AFB</abbr> in Oklahoma City.
-                            I currently am working towards my Associates in Software Development which will be completed in 2024. I like to play my guitar and I enjoy playing videos games.
+                            I currently am working towards my Associates in Software Development which will be completed in 2024. 
+                            I like to play my guitar and I enjoy playing videos games.
+
+                            <h4>Short Term Goals:</h4>  
+
                             <ol>
-                                <h4>Short Term Goals:</h4>                                
+                                                              
                                 <li>Finish Code Fellows Software Developer Program</li>
                                 <li>Finish Associate's in Software Development</li>
                             </ol>
         </p>
     </main>
 </body>
-<script>
-        setTimeout(function() {
-        // Your JavaScript code from app.js here
-    }, 5000); // 5000 milliseconds = 5 seconds
-</script>
 <script src="js/app.js"></script>
 </html>
