--- a/code201/lab 03(reference).html
+++ b/code201/lab 03(reference).html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -55,3 +55,4 @@
 </body>
 <script src="js/app.js"></script>
 </html>
+-->
